--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "inventory-sales": {
+    "QuanLyThieuNhiFE": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/inventory-sales",
+            "outputPath": "dist/QuanLyThieuNhiFE",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -29,7 +29,8 @@
               }
             ],
             "styles": [
-              "./node_modules/ng-zorro-antd/ng-zorro-antd.min.css",
+              "src/custom-theme.scss",
+              "node_modules/ng-zorro-antd/ng-zorro-antd.min.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -56,11 +57,6 @@
                   "type": "initial",
                   "maximumWarning": "2mb",
                   "maximumError": "5mb"
-                },
-                {
-                  "type": "anyComponentStyle",
-                  "maximumWarning": "6kb",
-                  "maximumError": "10kb"
                 }
               ]
             }
@@ -69,18 +65,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "inventory-sales:build"
+            "browserTarget": "QuanLyThieuNhiFE:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "inventory-sales:build:production"
+              "browserTarget": "QuanLyThieuNhiFE:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "inventory-sales:build"
+            "browserTarget": "QuanLyThieuNhiFE:build"
           }
         },
         "test": {
@@ -95,7 +91,7 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/ng-zorro-antd/ng-zorro-antd.min.css",
+              "node_modules/ng-zorro-antd/ng-zorro-antd.min.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -118,16 +114,16 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "inventory-sales:serve"
+            "devServerTarget": "QuanLyThieuNhiFE:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "inventory-sales:serve:production"
+              "devServerTarget": "QuanLyThieuNhiFE:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "inventory-sales"
+  "defaultProject": "QuanLyThieuNhiFE"
 }
