--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@angular/common": "~8.0.1",
     "@angular/compiler": "~8.0.1",
     "@angular/core": "~8.0.1",
-    "@angular/fire": "github:angular/fire",
+    "@angular/fire": "^5.3.0",
     "@angular/forms": "~8.0.1",
     "@angular/material": "^8.2.3",
     "@angular/material-moment-adapter": "^8.2.3",
@@ -25,6 +25,7 @@
     "@angular/platform-browser-dynamic": "~8.0.1",
     "@angular/router": "~8.0.1",
     "file-saver": "^2.0.2",
+    "firebase": "^7.6.2",
     "hammerjs": "^2.0.8",
     "jsbarcode": "^3.11.0",
     "moment": "^2.24.0",
