--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "sourceMap": true,
     "declaration": false,
     "downlevelIteration": true,
-    "forceConsistentCasingInFileNames" :true,
+    //"forceConsistentCasingInFileNames" :true,
     "experimentalDecorators": true,
     "module": "esnext",
     "moduleResolution": "node",
